# HomeKit-SDK

./: LICENSE  README.md
WirelessDeviceConfiguration/: settings.gradle
WirelessDeviceConfiguration/RxWifi/: build.gradle  proguard-rules.pro
WirelessDeviceConfiguration/RxWifi/src/main/: AndroidManifest.xml
WirelessDeviceConfiguration/app/: proguard-rules.pro
WirelessDeviceConfiguration/app/app/: build.gradle
WirelessDeviceConfiguration/gradle/wrapper/: gradle-wrapper.properties
WirelessDeviceConfiguration/web/: index.html
include/homekit/HapAccessory/: HapAccessoryImpl.h  HapPersistence.h  hap_api.h
include/homekit/HapSupport/data/: EntityIdentifier.h
include/homekit/IotCrypto/common/: crypto_api.h
include/homekit/IotCrypto/ed25519/: Ed25519.h
include/homekit/IotThingManager/thing/: ThingManager.h  ThingRuntime.h  thing_api.h
include/homekit/IotTypedef/common/: typedef_api.h
include/homekit/IotTypedef/constraint/: typedef_constraint.h
include/homekit/IotTypedef/controlled/: DeviceIdentifyListener.h  PropertyChangedListener.h  PropertyChangedObserver.h  PropertyOnControl.h
include/homekit/IotTypedef/data/: Data.h  DataType.h
include/homekit/IotTypedef/device/: Accessory.h  Device.h  DeviceConfig.h  Property.h  Service.h
include/homekit/IotTypedef/unit/: Unit.h
include/homekit/IotTypedef/urn/: Urn.h
include/homekit/MdnsRegistry/: MdnsHandler.h  MdnsHandlerContext.h  ServiceInfo.h
include/homekit/MdnsRegistry/codec/: DnsMessageCodec.h
include/homekit/MdnsRegistry/message/: DnsMessage.h  DnsName.h  DnsQuestion.h  DnsRecord.h  DnsTypedef.h
include/homekit/Netty/bootstrap/: Bootstrap.h
include/homekit/Netty/channel/: Channel.h  ChannelHandler.h  ChannelIdleStateHandler.h  SocketChannel.h
include/homekit/TinyBase/: tiny_api.h  tiny_base.h  tiny_debug.h  tiny_ret.h  tiny_typedef.h
include/homekit/TinyContainer/: TinyList.h  TinyMap.h
include/homekit/TinyPortable/: tiny_inet.h  tiny_inline.h  tiny_inline_windows.h  tiny_lor.h  tiny_malloc.h  tiny_malloc_esp.h  tiny_malloc_linux.h  tiny_malloc_windows.h  tiny_snprintf_esp.h  tiny_snprintf_linux.h  tiny_snprintf_windows.h  tiny_socket.h  tiny_socket_linux.h  tiny_socket_lwip.h  tiny_socket_windows.h  tiny_time.h
include/tiny/Json/: JsonArray.h  JsonNumber.h  JsonObject.h  JsonString.h  JsonToken.h  JsonTokenizer.h  JsonValue.h
include/tiny/TinyBase/: tiny_api.h  tiny_define.h  tiny_ret.h  tiny_typedef.h
include/tiny/TinyContainer/: TinyContainerListener.h  TinyList.h  TinyQueue.h
include/tiny/TinyLog/: tiny_log.h  tiny_log_binary.h  tiny_log_print.h
include/tiny/TinyPortable/: tiny_inet.h  tiny_inline_esp.h  tiny_inline_linux.h  tiny_lor.h  tiny_malloc.h  tiny_malloc_esp.h  tiny_malloc_linux.h  tiny_malloc_windows.h  tiny_snprintf.h  tiny_socket_linux.h  tiny_socket_lwip.h  tiny_socket_windows.h  tiny_strdup.h  tiny_time.h
include/tiny/TinyStringUtil/: tiny_buffer_append.h  tiny_char_util.h  tiny_str_equal.h  tiny_str_get_value.h  tiny_str_split.h  tiny_url_split.h
include/tinyhap/HapAccessory/: hap_api.h
include/tinymdns/TinyMDNS/: MdnsConstant.h  MdnsHandler.h  MdnsHandlerContext.h  ServiceInfo.h  ServiceListener.h  ServiceObserver.h  mdns_api.h
samples/: CMakeLists.txt
samples/sample_http-server/: CMakeLists.txt  ExampleHandler.c  sample_http_server.c
samples/sample_lightbulb/: CMakeLists.txt  mysocket.c  sample_lightbulb.c
samples/sample_lightbulb/hap/: AccessoryHost.c  AccessoryHost.h
samples/sample_lightbulb/hap/accessory/: DeskLamp.c  DeskLamp.h
samples/sample_lightbulb/hap/characteristics/: FirmwareRevision.c  FirmwareRevision.h  Identify.c  Identify.h  Manufacturer.c  Manufacturer.h  Model.c  Model.h  Name.c  Name.h  On.c  On.h  SerialNumber.c  SerialNumber.h
samples/sample_lightbulb/hap/services/: AccessoryInformation.c  AccessoryInformation.h  Lightbulb.c  Lightbulb.h
samples/sample_lightbulb/persistence/: HapPersistenceImpl.c
samples/test_http-message/: CMakeLists.txt  test_http_message.c
samples/test_ssdp/: CMakeLists.txt  ExampleSsdpHandler.c  mysocket.h  test_ssdp.c
samples_esp8266/sample_http-client/: Makefile
samples_esp8266/sample_http-client/include/: MyClientHandler.h
samples_esp8266/sample_http-client/user/: MyClientHandler.c  sample_http_client.c
samples_esp8266/sample_http-server/: Makefile
samples_esp8266/sample_http-server/include/: ExampleHandler.h
samples_esp8266/sample_http-server/user/: ExampleHandler.c  sample_http_server.c
samples_esp8266/sample_lightbulb/: Makefile
samples_esp8266/sample_lightbulb/hap_accessory/: AccessoryHost.c  Makefile  On.c
samples_esp8266/sample_lightbulb/hap_persistence/: HapPersistenceImpl.c  Makefile
samples_esp8266/sample_lightbulb/hap_user/: sample_lightbulb.c
samples_esp8266/sample_lightbulb/hap_wac/: Makefile  Wac.c
samples_esp8266/sample_lightbulb/user/: AccessoryHost.c  DeskLamp.c  HapPersistenceImpl.c  Lightbulb.c  On.c  sample_lightbulb.c
samples_esp8266/sample_mdns/: Makefile  gen_misc.sh
samples_esp8266/sample_mdns/include/: EmdnsConstant.h  EmdnsHandler.h  ServiceInfo.h  TxtRecord.h  bonjour_api.h
samples_esp8266/sample_mdns/user/: example_registry.c
samples_esp8266/sample_ssdp/: Makefile
samples_esp8266/sample_ssdp/include/: ExampleSsdpHandler.h
samples_esp8266/sample_ssdp/user/: ExampleSsdpHandler.c  Makefile  ssdp.c
samples_esp8266/sample_switch/: Makefile  gen_misc.sh
samples_esp8266/sample_switch/hap_accessory/: AccessoryInformation.c  AccessoryInformation.h  DeskLamp.c  FirmwareRevision.c  FirmwareRevision.h  Identify.c  Identify.h  Lightbulb.c  Manufacturer.c  Manufacturer.h  Model.c  Model.h  Name.c  Name.h  SerialNumber.c  SerialNumber.h
samples_esp8266/sample_switch/hap_persistence/: ControllerInfo.c  ControllerInfo.h  HapPersistenceImpl.c
samples_esp8266/sample_switch/hap_user/: Makefile  sample_lightbulb.c
samples_esp8266/sample_switch/hap_wdc/: Makefile  Wdc.c  WdcHandler.c  WdcHandler.h  WdcInfo.c
(+118 files in other folders)
